Fixing header links "jump" when JS kicks in

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -2605,7 +2605,8 @@ h1.title {
     padding: 0; }
 
 .user-navigation__links {
-  margin: 0 -8px;
+  margin: 0;
+  padding: 0;
   list-style: none; }
   .user-navigation__links > li {
     float: left;
